--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -26,7 +26,7 @@
     <main class="main-content" id="mainContent">
         <!-- 面包屑导航 -->
         <div class="breadcrumb">
-            <a href="/admin"><i class="fas fa-home"></i> 首页</a>
+            <a href="{{ url_for('admin_panel.index') }}"><i class="fas fa-home"></i> 首页</a>
             {% block breadcrumb %}{% endblock %}
         </div>
         
