--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -51,10 +51,10 @@
                 <i class="fas fa-chevron-down"></i>
             </button>
             <div class="dropdown-menu" id="userMenu">
-                <a href="#" class="dropdown-item">
+                <a href="{{ url_for('admin_panel.profile') }}" class="dropdown-item">
                     <i class="fas fa-user"></i> 个人设置
                 </a>
-                <a href="#" class="dropdown-item">
+                <a href="{{ url_for('admin_panel.profile') }}" class="dropdown-item">
                     <i class="fas fa-key"></i> 修改密码
                 </a>
                 <div class="dropdown-divider"></div>
