Initial commit: Flask客服系统

--- a/templates/admin/comments.html
+++ b/templates/admin/comments.html
@@ -22,7 +22,7 @@
                 <p class="subtitle">查看和管理访客评价，分析服务质量</p>
             </div>
             <div class="header-right">
-                <button class="btn-primary" onclick="window.location.href='/admin'">
+                <button class="btn-primary" onclick="window.location.href='{{ url_for('admin_panel.index') }}'">
                     <i class="fas fa-arrow-left"></i> 返回后台
                 </button>
             </div>
