--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -30,7 +30,7 @@
                 <button class="btn-primary" onclick="refreshData()">
                     <i class="fas fa-sync-alt"></i> 刷新
                 </button>
-                <button class="btn-secondary" onclick="window.location.href='/admin'">
+                <button class="btn-secondary" onclick="window.location.href='{{ url_for('admin_panel.index') }}'">
                     <i class="fas fa-arrow-left"></i> 返回
                 </button>
             </div>
