--- a/templates/admin/visitor_detail.html
+++ b/templates/admin/visitor_detail.html
@@ -210,7 +210,7 @@
 {% block content %}
 <div class="page-container">
 <div class="container">
-        <a href="/admin/visitors" class="back-btn">
+        <a href="{{ url_for('admin_panel.visitors') }}" class="back-btn">
             <i class="fas fa-arrow-left"></i> 返回访客列表
         </a>
 
