--- a/templates/install/already_installed.html
+++ b/templates/install/already_installed.html
@@ -21,7 +21,7 @@
             <a href="/" class="btn">
                 <i class="fas fa-home"></i> 返回首页
             </a>
-            <a href="/login" class="btn btn-secondary">
+            <a href="{{ url_for('auth_view.login') }}" class="btn btn-secondary">
                 <i class="fas fa-sign-in-alt"></i> 前往登录
             </a>
         </div>
