--- a/templates/login.html
+++ b/templates/login.html
@@ -46,7 +46,7 @@
             </div>
             {% endif %}
 
-            <form method="POST" action="{{ url_for('auth_view.login_page') }}" id="loginForm">
+            <form method="POST" action="{{ url_for('auth_view.login') }}" id="loginForm">
                 <div class="form-group">
                     <label for="username">
                         <i class="fas fa-user"></i> 用户名
