--- a/templates/admin/services.html
+++ b/templates/admin/services.html
@@ -25,7 +25,7 @@
                 <button class="btn-primary" onclick="openAddModal()">
                     <i class="fas fa-plus"></i> 添加客服
                 </button>
-                <button class="btn-secondary" onclick="window.location.href='/admin'">
+                <button class="btn-secondary" onclick="window.location.href='{{ url_for('admin_panel.index') }}'">
                     <i class="fas fa-arrow-left"></i> 返回
                 </button>
             </div>
